# Geometry-of-Reasoning-Trajectories

./: .gitignore  LICENSE  README.md  pyproject.toml
.serena/: project.yml
configs/: default.yaml
docs/: ANALYSIS_SUMMARY.md  two_scale.md
notebooks/: 00_smoke_extract.ipynb  01_mvp.ipynb  01_mvp_h2.ipynb  02_two_scale.ipynb
results/: FINDINGS.txt  band.csv  band_map.npy  convergence.csv  counting.csv  counting_accuracy.csv  counting_map.npy  counting_two_scale.csv  dissoc_multiinit.csv  dissociation_15seed.csv  dissociation_results.csv  forceloop.csv  h2_loops.csv  homology.csv  maxtask.csv  pararule.csv  pararule_depth.csv  pararule_depth_map.npy  phase.csv  switch.csv  two_scale_analysis.csv  two_scale_placeholder.csv
scripts/: __init__.py  _common.py  extract.py  plot_two_scale_results.py  run_accuracy.py  run_contrast.py  run_convergence.py  run_counting.py  run_dissociation.py  run_dissociation_multiinit.py  run_forceloop.py  run_homology.py  run_maxtask.py  run_mvp.py  run_pararule.py  run_phase.py  run_switch.py  run_two_scale_analysis.py  run_two_scale_counting.py  run_two_scale_depth.py  run_two_scale_real.py
src/traj_geom/: __init__.py  constants.py  eval.py  types.py
src/traj_geom/analysis/: __init__.py  band.py  correlate.py  plots.py
src/traj_geom/extraction/: __init__.py  hook.py  model.py
src/traj_geom/metrics/: __init__.py  convergence.py  dynamics.py  homology.py  projection.py  two_scale.py  (+1 more)
tests/: test_convergence.py  test_correlate.py  test_gate_synthetic.py  test_homology.py  test_simple.py  test_two_scale.py  test_types.py  test_winding_synthetic.py
trajectories/: local_n48_ns64_init0.npy  local_n48_ns64_init1.npy  local_n48_ns64_init2.npy  manifest.csv  track_n24_ns16_init0.npy  track_n24_ns16_init1.npy  track_n24_ns16_init2.npy  track_n48_ns16_init0.npy  track_n48_ns16_init1.npy  track_n48_ns16_init2.npy  track_n48_ns64_init0.npy  track_n48_ns64_init1.npy  track_n48_ns64_init2.npy  track_n4_ns64_init0.npy  track_n4_ns64_init1.npy  track_n4_ns64_init2.npy
(+3 files in other folders)
