[project]
name = "traj-geom"
version = "0.1.0"
description = "Inference-only study of latent reasoning trajectories in the Huginn-3.5B recurrent-depth transformer."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pingouin",
    "pyyaml",
]

[project.optional-dependencies]
model = [
    "torch",
    "transformers",
    "accelerate",
]
tda = [
    "giotto-tda",
    "ripser",
    "persim",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traj_geom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
