[project]
name = "traj-geom"
version = "0.1.0"
description = "Inference-only study of latent reasoning trajectories in the Huginn-3.5B recurrent-depth transformer."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
model = [
    "torch",
    "transformers==4.53.3",
    "accelerate",
    "datasets",
]
tda = [
    "ripser",
    "persim",
    "scipy",
]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traj_geom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
# Notebooks are proven exploratory scratch (semicolons, throwaway vars) — don't lint.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
